@startuml
title Diagramme de Classes pour Schoolo

class User {
    +id: int
    +first_name: String
    +last_name: String
    +email: String
    +password: String
    +creation_date: TimeStamp
}

class Student extends User {
    +experience_level: int
}

class Teacher extends User {
    +lessons: List<Lesson>
}

class Parent extends User {
    +children: List<Student>
}


class Lesson {
    +id: int
    +title: String
    +description: String
    +content: String
    +subject: String
    +isPublic: boolean
    +teacher: Teacher
}

class Quiz {
    +id: int
    +title: String
    +subject: String
    +number_of_questions: int
    +is_public: boolean
    +teacher: Teacher
    +questions: List<Student>
}

class Question {
    +id: int
    +text: String
    +question_type: String
    +correct_answer: String
}

class Choice {
    +id: int
    +text: String
    +question: Question
}

class ResultQuizz {
    +id: int 
    +score: int
    +Student: Student
    +Quizz: Quizz
    +date: TimeStamp
}


class Task {
    +id: int
    +title : String
    +description: Text
    +creation_date: TimeStamp
    +start_date: TimeStamp
    +end_date: TimeStamp
    +isDone : boolean
}


Quiz "1" --> "*" Question : contains
Question "0..*" --> "*" Choice : has
User  --> "1" Planning
Parent "0..*" --> "0..*" Student
Lesson "0..*" --> "1" Teacher
Result "0..*" --> "1" Eleve

' class Controle {
'     +id: int
'     +titre: String
'     +date: Date
'     +resultats: List<Resultat>
'     +lecon: Lecon
' }

' Controle "0..*" --> "1" Lecon
' Controle "0..*" --> "0..*" Resultat
' Planning "1" --> "0..*" Tache



@enduml
